--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
 [project]
-name = "project"
+name = "hyperstats"
 authors = [{ name = "Mihai Cosma", email = "mcosma@gmail.com" }]
 version = "0.1.0"
+dependencies = [
+    "web3",
+    "python-dotenv",
+]
 
 [tool.pylint.format]
 max-line-length = "200"
@@ -24,10 +28,11 @@ select = ["A", "D", "I", "N", "PL"]
 # D203: 1 blank line required before class docstring (incompatible with D211: no blank lines before class docstring)
 # D213: multi-line-summary-second-line (incompatible with D212: multi-line summary should start at the first line)
 # D413: Missing blank line after last section
+# PLR0912: Too many branches (X > 12)
 # PLR0913: Too many arguments to function call (X > 5)
 # PLR0915: Too many statements (X > 50)
 # PLR2004: Magic value used in comparison
-ignore = ["A002", "D100", "D101", "D102", "D103", "D105", "D107", "D203", "D213", "D413", "PLR0913", "PLR0915", "PLR2004"]
+ignore = ["A002", "D100", "D101", "D102", "D103", "D105", "D107", "D203", "D213", "D413", "PLR0912", "PLR0913", "PLR0915", "PLR2004"]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
 fixable = ["A", "D", "I", "N", "PL"]
